# snipster

./: Cargo.toml  snippets.json
sh/: write_command.sh
src/: clipboard.rs  error.rs  main.rs
src/commands/: commands.rs  fzf_builder.rs  mod.rs
src/storage/: file.rs  mod.rs  placeholder.rs
